--- a/Fitness/src/main/webapp/resources/css/styles.css
+++ b/Fitness/src/main/webapp/resources/css/styles.css
@@ -3096,13 +3096,13 @@ textarea.form-control-lg {
 
 .btn-secondary {
   color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  background-color: #A00000;
+  border-color: #c34e2e;
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  background-color: #b90000;
+  border-color: #c34e2e;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: #fff;
