--- a/Fitness/src/main/webapp/resources/css/styles.css
+++ b/Fitness/src/main/webapp/resources/css/styles.css
@@ -634,10 +634,17 @@ progress {
 }
 
 .img-fluid {
-  max-width: 100%;
-  height: auto;
+  width: 100%;
+  height: 339px;
 }
-
+.img-fluid2 {
+  width: 100%;
+  height: 339px;
+}
+.img-fluid3 {
+  width: 100%;
+  height: 339px;
+}
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
@@ -7808,6 +7815,7 @@ textarea.form-control-lg {
 .text-muted {
   --bs-text-opacity: 1;
   color: #6c757d !important;
+  
 }
 
 .text-black-50 {
@@ -11427,7 +11435,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("https://www.bodychannel.co.kr/dist/img/main/slide_bg_4.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
